--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
     <script>
         const sentences = [
-            "Learning to type is fun!",
-            "Practice makes perfect.",
-            "Stay focused and keep typing.",
-            "I enjoy playing typing games.",
-            "Coding is an exciting skill!",
-            "Hello World!",
-            "Practice makes perfect in programming.",
-            "Learning to code is like solving puzzles.",
-            "Errors help us learn.",
-            "Keep coding every day!"
+        "script.Parent.CFrame = script.Parent.CFrame", 
+	    "local function disappear() platform.CanCollide = false",
+            "while true do task.wait(5) disappear() task.wait(5) appear() end",
+            "script.Parent.Touched:Connect(function(hit)",
+            "if hit and hit.Parent and hit.Parent:FindFirstChild("Humanoid")",
+            "then hit.Parent.Humanoid.Health = 0 end",
+            "for i = 1,25 do part.CFrame = script.Parent.CFrame*CFrame.new(0,0,-0.5)",
+            "script.Parent.CFrame = script.Parent.CFrame",
+            "*CFrame.new(0,0,0)*CFrame.fromEulerAnglesXYZ",
+            "then hit.Parent:BreakJoints() end"
         ];
 
         const sentenceDisplay = document.getElementById('sentence');
@@ -75,3 +75,4 @@
     </script>
 </body>
 </html>
+
