--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="game-container">
         <img src="logo.png" width="400px" height="150px">
         <h1>TYPING CHALLENGE - SEASON 3</h1>
-        <p class="sentence" id="sentence">Type this sentence:</p>
+        <p class="sentence" id="sentence" style:"background-color:orange";>Type this sentence:</p>
         <textarea id="input-box" class="input-box" placeholder="Type here..."></textarea>
         <button id="submit-btn" class="submit-btn">Submit</button>
         <div class="result" id="result"></div>
@@ -75,5 +75,6 @@
     </script>
 </body>
 </html>
+
 
 
