--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <script>
        const sentences = [
     "script.Parent.CFrame=script.Parent.CFrame",
-    "localfunctiondisappear()platform.CanCollide=false",
-    "whiletruedotask.wait(5)disappear()task.wait(5)appear()end",
-    "script.Parent.Touched:Connect(function(hit)",
-    "ifhitandhit.Parentandhit.Parent:FindFirstChild('Humanoid')",
-    "thenhit.Parent.Humanoid.Health=0end",
-    "fori=1,25dopart.CFrame=script.Parent.CFrame*CFrame.new(0,0,-0.5)",
-    "script.Parent.CFrame=script.Parent.CFrame*CFrame.new(0,0,0)*CFrame.fromEulerAnglesXYZ",
-    "thenhit.Parent:BreakJoints()end"
+    "local_function_disappear()platform.CanCollide=false",
+    "while_true_do_task.wait(5)disappear()task.wait(5)appear()end",
+    "script.Parent.Touched:Connect(function(hit))",
+    "if_hit_and_hit.Parent_and_hit.Parent:FindFirstChild('Humanoid')",
+    "thenhit.Parent.Humanoid.Health=0_end",
+    "for_i=1,25_do_part.CFrame=script.Parent.CFrame*CFrame.new(0,0,-0.5)",
+    "script.Parent.CFrame=script.Parent.CFrame*CFrame.new(0,0,0)",
+    "then_hit.Parent:BreakJoints()end"
 ];
 
 
@@ -75,6 +75,7 @@
     </script>
 </body>
 </html>
+
 
 
 
